@@ -1,7 +1,7 @@
 Package: pedometrics
 Title: Pedometric Tools and Techniques
-Version: 0.4-0
-Date: 2014-11-26
+Version: 0.4-1
+Date: 2014-12-01
 Authors@R: c(person("Alessandro Samuel-Rosa", role = c("aut", "cre"), email =
     "alessandrosamuelrosa@gmail.com"), person("Lucia Helena Cunha dos Anjos",
     role = "ths", email = "lanjos@ufrrj.br"), person("Gustavo de Mattos
@@ -36,13 +36,9 @@ Imports:
     plyr,
     pbapply,
     Rcpp (>= 0.11.0),
-    rgeos,
     sp,
     spsurvey,
-    stringr,
-    VecStatGraphs2D,
-    xtable,
-    XML
+    xtable
 LinkingTo: Rcpp
 Suggests:
     methods
