@@ -1,20 +1,3 @@
-#  file pedometrics/R/spJitter.R
-#
-#  This program is free software; you can redistribute it and/or modify
-#  it under the terms of the GNU General Public License as published by
-#  the Free Software Foundation; either version 2 or 3 of the License
-#  (at your option).
-#
-#  This program is distributed in the hope that it will be useful,
-#  but WITHOUT ANY WARRANTY; without even the implied warranty of
-#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-#  GNU General Public License for more details.
-#
-#  A copy of the GNU General Public License is available at
-#  http://www.r-project.org/Licenses/
-#
-# DOCUMENTATION ################################################################
-#'
 #' @title Random perturbation of spatial points
 #' 
 #' @description
@@ -90,15 +73,15 @@
 #' @examples
 #' require(sp)
 #' data(meuse.grid)
-#' meuse.grid <- meuse.grid[, 1:2]
+#' meuse.grid <- as.matrix(meuse.grid[, 1:2])
+#' meuse.grid <- matrix(cbind(1:dim(meuse.grid)[1], meuse.grid), ncol = 3)
 #' pts1 <- sample(c(1:dim(meuse.grid)[1]), 155)
 #' pts2 <- meuse.grid[pts1, ]
 #' pts3 <- spJitterFinite(points = pts2, candidates = meuse.grid, x.min = 40,
-#'                      x.max = 100, y.min = 40, y.max = 100, which.point = 10)
-#' plot(meuse.grid, asp = 1, pch = 15, col = "gray")
-#' points(pts2, col = "red", cex = 0.5)
-#' points(pts3, pch = 19, col = "blue", cex = 0.5)
-#' 
+#'                       x.max = 100, y.min = 40, y.max = 100, which.point = 10)
+#' plot(meuse.grid[, 2:3], asp = 1, pch = 15, col = "gray")
+#' points(pts2[, 2:3], col = "red", cex = 0.5)
+#' points(pts3[, 2:3], pch = 19, col = "blue", cex = 0.5)
 # FUNCTION #####################################################################
 spJitterFinite <-
   function (points, candidates, x.max, x.min, y.max, y.min, which.point) {
