@@ -23,7 +23,7 @@ discouraged.
 }
 \details{
 \tabular{ll}{ Package: \tab pedometrics\cr Type: \tab Package\cr Version:
-\tab 0.4-0\cr Date: \tab 2014-11-26\cr License: \tab GPL (>= 2)\cr }
+\tab 0.4-1\cr Date: \tab 2014-12-01\cr License: \tab GPL (>= 2)\cr }
 }
 \author{
 Author and Maintainer: Alessandro Samuel-Rosa
