@@ -33,8 +33,6 @@ This function perturbs the coordinates of spatial points. This is also known
 as \sQuote{jittering}.
 }
 \details{
-
-
 This function perturbs the coordinates of spatial points adding random noise,
 a process also known as \sQuote{jittering}. There are two ways of jittering
 the coordinates. They differ on how the the set of candidate locations is
@@ -76,14 +74,15 @@ the R-package \pkg{pedometrics}.
 \examples{
 require(sp)
 data(meuse.grid)
-meuse.grid <- meuse.grid[, 1:2]
+meuse.grid <- as.matrix(meuse.grid[, 1:2])
+meuse.grid <- matrix(cbind(1:dim(meuse.grid)[1], meuse.grid), ncol = 3)
 pts1 <- sample(c(1:dim(meuse.grid)[1]), 155)
 pts2 <- meuse.grid[pts1, ]
 pts3 <- spJitterFinite(points = pts2, candidates = meuse.grid, x.min = 40,
-                     x.max = 100, y.min = 40, y.max = 100, which.point = 10)
-plot(meuse.grid, asp = 1, pch = 15, col = "gray")
-points(pts2, col = "red", cex = 0.5)
-points(pts3, pch = 19, col = "blue", cex = 0.5)
+                      x.max = 100, y.min = 40, y.max = 100, which.point = 10)
+plot(meuse.grid[, 2:3], asp = 1, pch = 15, col = "gray")
+points(pts2[, 2:3], col = "red", cex = 0.5)
+points(pts3[, 2:3], pch = 19, col = "blue", cex = 0.5)
 }
 \author{
 Alessandro Samuel-Rosa \email{alessandrosamuelrosa@gmail.com}
